// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text default 1`] = `
<span
  className="
      text
      text--sm
      
      
    "
>
  Lorem ipsum
</span>
`;

exports[`Text inverted 1`] = `
<span
  className="
      text
      text--sm
      text--inverted
      
    "
>
  Lorem ipsum
</span>
`;

exports[`Text inverted-darker 1`] = `
<span
  className="
      text
      text--sm
      
      text--inverted-dark
    "
>
  Lorem ipsum
</span>
`;

exports[`Text with specified size prop 1`] = `
<span
  className="
      text
      text--md
      
      
    "
>
  Lorem ipsum
</span>
`;
